feat: night mode switcher

--- a/src/shared/ui/header/header.html
+++ b/src/shared/ui/header/header.html
@@ -2,6 +2,7 @@
   <p-toolbar class="flex-col md:flex-row">
     <ng-template #start>
       <p-button class="hidden md:block" icon="pi pi-home" [routerLink]="homeLink"></p-button>
+      <app-dark-mode-switcher class="hidden md:block"></app-dark-mode-switcher>
       <ng-container *ngTemplateOutlet="headerStart"></ng-container>
       <div class="ml-auto md:hidden">
         <p-menu #menu [model]="items" [popup]="true"></p-menu>
