feat: mobile header menu

--- a/src/shared/ui/dark-mode-switcher/dark-mode-switcher.html
+++ b/src/shared/ui/dark-mode-switcher/dark-mode-switcher.html
@@ -1,1 +1,7 @@
-<p-button #button [icon]="switcherIcon()" [text]="true" (onClick)="toggleNightMode()"></p-button>
+<p-button
+  [icon]="switcherIcon()"
+  [text]="true"
+  (onClick)="handleClick()"
+  [label]="switcherLabel()"
+  [fluid]="true"
+></p-button>
