--- a/src/pages/catalog/ui/catalog-page/catalog-page.html
+++ b/src/pages/catalog/ui/catalog-page/catalog-page.html
@@ -1,6 +1,6 @@
 <app-header>
   <ng-template #headerStart>
-    <h1 class="text-2xl font-bold md:ml-4">{{ title | uppercase }}</h1>
+    <h1 class="text-primary text-2xl font-bold md:ml-4">{{ title | uppercase }}</h1>
   </ng-template>
 
   <ng-template #headerEnd>
