--- a/src/pages/catalog/ui/cinema-card/cinema-card.html
+++ b/src/pages/catalog/ui/cinema-card/cinema-card.html
@@ -1,3 +1,5 @@
-<p-card>
-  <ng-template #header> </ng-template>
+<p-card class="bg-primary-200">
+  <ng-template #header>
+    <img class="w-full rounded-md" alt="Cinema poster" [src]="cinemaPosterSource()" />
+  </ng-template>
 </p-card>
