--- a/src/pages/catalog/ui/catalog-page/catalog-page.html
+++ b/src/pages/catalog/ui/catalog-page/catalog-page.html
@@ -14,9 +14,15 @@
 <p-card class="mt-4">
   <main class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5">
     @for (cinema of cinemaCatalog$ | async; track cinema?.id) {
-      <app-cinema-card class="h-full" [cinema]="cinema"></app-cinema-card>
+      <app-cinema-card
+        (cinemaSelect)="dialog.open(cinema)"
+        class="h-full"
+        [cinema]="cinema"
+      ></app-cinema-card>
     } @empty {
       <p>Каталог пуст 🥲</p>
     }
   </main>
 </p-card>
+
+<app-cinema-dialog #dialog></app-cinema-dialog>
